--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1.58MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇭🇰 (已存活6天)香港-3.54MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-6.63MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.59MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
+  - {name: 🇫🇷 法国-2.52MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-4.98MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-4.81MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.77MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-7.10MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活6天)香港-3.54MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.58MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
