--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.47MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.53MB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-3.56MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-173.4KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-4.54MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.77MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.32MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-151.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.31MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-164.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.67MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-173.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-173.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,50 +52,51 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-173.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-173.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-173.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +104,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-173.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +129,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-173.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
