--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-173.4KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-4.54MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.34MB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇺🇸 美国-2.28MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.27MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.68MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-3.03MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-191.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.32MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-151.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-164.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-173.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-173.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-173.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
@@ -66,19 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-173.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
@@ -88,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-173.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
@@ -104,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-173.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
@@ -129,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-173.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活6天)香港-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
